chore(backend): implemented: * POST /api/partners/filecoin/buyers * GET /api/partners/filecoin/buyers * GET /api/partners/filecoin/buyers/{id} * PATCH /api/partners/filecoin/buyers/{id} * DELETE /api/partners/filecoin/buyers/{id}
