# apps/backend/src/buyers/dto/create-buyer.dto.ts
@@ -1,1 +1,9 @@
-export class CreateBuyerDto {}
+import { ApiProperty } from "@nestjs/swagger";
+
+export class CreateBuyerDto {
+  @ApiProperty({ example: 'f0112027' })
+  filecoinMinerId: string;
+
+  @ApiProperty({ example: '-' })
+  name: string;
+}
